# techcoin

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure-static.sh  configure.ac  libtechcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  techcoin.sln  techcoin_config.h  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  techcoin-cli.bash-completion  techcoin-tx.bash-completion  techcoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  techcoin-conf.md  tor.md  tracing.md  translation_process.md  (+2 more)
doc/man/: Makefile.am  techcoin-cli.1  techcoin-qt.1  techcoin-tx.1  techcoin-util.1  techcoin-wallet.1  techcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  (+114 more)
(+883 files in other folders)
