dist_man1_MANS=

if BUILD_TECHCOIND
  dist_man1_MANS+=techcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=techcoin-qt.1
endif

if BUILD_TECHCOIN_CLI
  dist_man1_MANS+=techcoin-cli.1
endif

if BUILD_TECHCOIN_TX
  dist_man1_MANS+=techcoin-tx.1
endif

if BUILD_TECHCOIN_UTIL
  dist_man1_MANS+=techcoin-util.1
endif

if ENABLE_WALLET
if BUILD_TECHCOIN_WALLET
  dist_man1_MANS+=techcoin-wallet.1
endif
endif
